--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
               <li>
                   <b>Test Image - </b><img src="waterbottle.jpeg" class="img-responsive">
               </li>
-              <h5>Output on <b>Google Lens</b> - ""
+              <h5>Output on <b>Google Lens</b> - "orange water bottle"
                 <span> </span>
             </h5>
-            <h5>Output on <b>Mobilenet</b> - ""
+            <h5>Output on <b>Mobilenet</b> - "water bottle"
                 <span> </span>
             </h5>
 
             <div class="bob3">
-                <h4>Result - </h4>
+                <h4>Result - Google Lens was more accurate in recognizing this image</h4>
                 <hr>
                 <h4> </h4>
             </div>
@@ -46,15 +46,15 @@
             <li>
                 <b>Test Image - </b><img src="tapedispenser.jpeg" class="img-responsive">
             </li>
-            <h5>Output on <b>Google Lens</b> - ""
+            <h5>Output on <b>Google Lens</b> - "fuse block"
               <span> </span>
           </h5>
-          <h5>Output on <b>Mobilenet</b> - ""
+          <h5>Output on <b>Mobilenet</b> - "mouse, computer mouse"
               <span> </span>
           </h5>
 
           <div class="bob3">
-              <h4>Result - </h4>
+              <h4>Result - Neither one recognized this image correctly</h4>
               <hr>
               <h4> </h4>
           </div>
@@ -64,15 +64,15 @@
             <li>
                 <b>Test Image - </b><img src="mouse.jpeg" class="img-responsive">
             </li>
-            <h5>Output on <b>Google Lens</b> - ""
+            <h5>Output on <b>Google Lens</b> - "Redgragon RGB Gaming Mouse"
               <span> </span>
           </h5>
-          <h5>Output on <b>Mobilenet</b> - ""
+          <h5>Output on <b>Mobilenet</b> - "mouse, computer mouse"
               <span> </span>
           </h5>
 
           <div class="bob3">
-              <h4>Result - </h4>
+              <h4>Result - Google Lens was more accurate in recognizing this image</h4>
               <hr>
               <h4> </h4>
           </div>
@@ -82,15 +82,15 @@
             <li>
                 <b>Test Image - </b><img src="minibasketball.jpeg" class="img-responsive">
             </li>
-            <h5>Output on <b>Google Lens</b> - ""
+            <h5>Output on <b>Google Lens</b> - "Sklz Mini Hoop Ball"
               <span> </span>
           </h5>
-          <h5>Output on <b>Mobilenet</b> - ""
+          <h5>Output on <b>Mobilenet</b> - "basketball"
               <span> </span>
           </h5>
 
           <div class="bob3">
-              <h4>Result - </h4>
+              <h4>Result - Google Lens was more accurate in recognizing this image</h4>
               <hr>
               <h4> </h4>
           </div>
@@ -100,20 +100,20 @@
             <li>
                 <b>Test Image - </b><img src="calculator.jpeg" class="img-responsive">
             </li>
-            <h5>Output on <b>Google Lens</b> - ""
+            <h5>Output on <b>Google Lens</b> - "Texas Instruments TI-30X IIS"
               <span> </span>
           </h5>
-          <h5>Output on <b>Mobilenet</b> - ""
+          <h5>Output on <b>Mobilenet</b> - "cellular telephone, cellular phone, cellphone, cell, mobile phone"
               <span> </span>
           </h5>
 
           <div class="bob3">
-              <h4>Result - </h4>
+              <h4>Result - Google Lens was more accurate in recognizing this image</h4>
               <hr>
               <h4> </h4>
           </div>
         </div>
-        <h4>The winner is: </h4>
+        <h4>The winner is: Google Lens!!! - I have tested these 5 images and Google Lens recognized all of images more accurately and Mobilenet recognized none of images more accurately which means that Google Lens is more accurate.</h4>
         <hr>
        
     </ol>
